--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,12 +8,12 @@ dependencies = [
     "rich>=13.9.3,<14", 
     "streamlit>=1.41", 
     "crewai>=0.100", 
-    "llm-foundation>0.0.26",
+    "llm-foundation>0.0.27",
     "selenium>=4.16.1",
     "beautifulsoup4>=4.12.3",
     "requests>=2.31.0",
     "jsonlines>=3.1.0", 
-    "crewai-tools>=0.33.0,<1.0"]
+    "crewai-tools>=0.33.0,<1.0", "shiny>=1.2.1,<2"]
 
 [build-system]
 build-backend = "hatchling.build"
@@ -27,7 +27,7 @@ platforms = ["osx-arm64"]
 auto-cv = { path = ".", editable = true }
 
 [tool.pixi.tasks]
-ui="pixi run shiny run src/auto-cv/ui/main_app.py"
+ui="pixi run shiny run -r src/auto_cv/ui/main_shiny_app.py"
 
 [tool.pixi.dependencies]
 pypdf = ">=5.0.1,<6"
@@ -46,3 +46,5 @@ run_crew = "auto_cv.main:run"
 train = "auto_cv.main:train"
 replay = "auto_cv.main:replay"
 test = "auto_cv.main:test"
+run_cv_adaptor_crew = "auto_cv.cv_adaptor_main:run"
+run_cv_compiler_crew = "auto_cv.cv_compiler_main:run"
